add minimal profile and settings content

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,12 +7,16 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Profile</ion-title>
+    <ion-title>Profil</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <h1>Profil</h1>
+  <ul>
+    <li>Profilname:</li>
+    <li></li>
+  </ul>
 </ion-content>
