--- a/src/pages/timesheet/timesheet-timepicker/timesheet-timepicker.html
+++ b/src/pages/timesheet/timesheet-timepicker/timesheet-timepicker.html
@@ -1,18 +1,16 @@
-<div class="timesheet-timepicker">
-    <div class="day">{{ day.day | date:'EE' }}</div>
-    <div class="working-hours">
-      <button class="day-picker">
-        START {{ day.from | date:'shortTime' }}
-      </button>
-      BIS
-      <button class="day-picker">
-        ENDE {{ day.to | date:'shortTime' }}
-      </button>
-    </div>
-    <div class="action-bar">
-      <button>
-        <i class="material-icons">wb_sunny</i>
-      </button>
-    <div>
+<div class="day">{{ day.day | date:'EE' }}</div>
+<div class="working-hours">
+  <button class="day-picker">
+    START {{ day.from | date:'shortTime' }}
+  </button>
+  BIS
+  <button class="day-picker">
+    ENDE {{ day.to | date:'shortTime' }}
+  </button>
 </div>
+<div class="action-bar">
+  <button clear color="dark" icon-only ion-button>
+    <ion-icon name="sunny"></ion-icon>
+  </button>
+<div>
 
