--- a/src/pages/timesheet/timesheet.html
+++ b/src/pages/timesheet/timesheet.html
@@ -15,20 +15,25 @@
 </ion-header>
 
 <ion-content padding>
-  <h1>{{ year }}</h1>
+  <button clear color="dark" ion-button block (click)="yearPicker.open()">
+    <ion-datetime #yearPicker
+                  displayFormat="YYYY"
+                  pickerFormat="YYYY"
+                  [(ngModel)]="year">
+    </ion-datetime>
+  </button>
   
-  <button ion-button icon-only icon-left (click)="previousMonth()">
+  <button clear color="dark" ion-button icon-only icon-left (click)="previousMonth()">
     <ion-icon name="ios-arrow-back"></ion-icon>
   </button>
-  <h2>{{ month }}</h2>
-  <button ion-button icon-only icon-right (click)="nextMonth()">
+  <button class="month-selector" clear color="dark" ion-button (click)="selectMonth()">
+    {{ month | month }}</button>
+  <button clear color="dark" ion-button icon-only icon-right (click)="nextMonth()">
     <ion-icon name="ios-arrow-forward"></ion-icon>
   </button>
 
   <div class="timesheet-week" *ngFor="let week of timesheet">
     <h2>KW {{ week.weekNumber }}</h2>
-    <span *ngFor="let day of week.days">
-      <timesheet-timepicker [day]="day"></timesheet-timepicker>
-    </span>
+    <timesheet-timepicker [day]="day" *ngFor="let day of week.days"></timesheet-timepicker>
   </div>
 </ion-content>
